--- a/index.html
+++ b/index.html
@@ -4,31 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://www.shutterstock.com/image-illustration/crud-acronym-create-read-update-600nw-2491959959.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/styles/style.css">
-    <title>Cadastro de Produtos</title>
+    <link rel="stylesheet" href="style.css">
+    <title>CRUD de Produtos</title>
 </head>
 
-<body style="background-color: #212529; color: #fff;">
+<body>
+
     <section class="container mt-5">
+
         <div class="text-center mb-4">
             <h2>Cadastro de produtos</h2>
         </div>
+
         <div>
-            <form onsubmit="validarDados()" action="" class="was-validated">
+            <form onsubmit="validarDados(event)" action="" class="was-validated">
                 <div class="form-group mb-3">
                     <label for="nome">Nome do Produto</label>
                     <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do produto" required>
                 </div>
-                <div class="form-group mb-3 ">
+                
+                <div class="form-group mb-3">
                     <label for="valor">Valor</label>
-                    <input type="number" class="form-control" id="valor" name="valor" placeholder="Valor do produto" required>
+                    <input type="number" class="form-control" id="valor" name="valor" placeholder="Valor do produto" required step="0.01" min="0">
                 </div>
+
                 <div class="form-group mb-3"> 
                     <label for="qtd">Quantidade</label>
                     <input type="number" class="form-control" id="qtd" name="qtd" placeholder="Quantidade" required>
                 </div>
+
                 <div class="form-group mb-3">
                     <label for="img">Imagem</label>
                     <input type="text" class="form-control" id="img" name="img" placeholder="Imagem do produto" required>
@@ -51,12 +58,16 @@
                     <th>IMAGEM</th>
                     <th>AÇÕES</th>
                 </tr>
-
             </thead>
+
             <tbody id="conteudoTabela"></tbody>
+
         </table>
+
     </section>
-    <script src="./src/script/script.js"></script>
+
+    <script src="script.js"></script>
+
 </body>
 
 </html>
